# VATrecovery

./: .codecov.yml  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  credentials.json  docker-compose.yml  fetch_rydoo.py  pyproject.toml  pytest.ini  requirements.txt  run.sh  run_worker.py  security.py
.github/workflows/: ci.yml  docker.yml  test.yml  tests.yml
app/: __init__.py  api.py  auth.py  config.py  dashboard.py  database.py  dependencies.py  email_sender.py  fetch_rydoo.py  imap_listener.py  init_db.py  logger_setup.py  main.py  models.py  ocr_engine.py  receipts.py  reminder.py  scheduler.py  schemas.py  security.py
app/integrations/: base.py  factory.py  rydoo.py  sap_concur.py
app/metrics/: prometheus_middleware.py
app/migrations/: env.py
app/migrations/versions/# app/migrations/versions/: __init__.py
app/queue/: redis_queue.py
app/tasks/: worker.py
app/templates/: dashboard.html  index.html  layout.html  login.html  request_invoice.html
app/webhooks/: handlers.py
test/: conftest.py  setup.py  test_api_docs.py  test_auth.py  test_client_vat_recovery.py  test_email_sender.py  test_end_to_end.py  test_end_to_end_ocr_upload.py  test_imap_listener.py  test_logger_setup.py  test_main.py  test_ocr_engine.py  test_receipts.py  test_reminder.py  test_scheduler.py  test_schemas.py
