[tool.poetry]
name = "vatrecovery"
version = "0.1.0"
description = "Récupération de TVA sur notes de frais"
authors = ["Ton Nom <ton.email@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"
httpx = "^0.23.3"
pydantic = "^2.4.2"
sqlalchemy = "^1.4"
pytesseract = "^0.3.13"
pillow = "^9.5.0"
apscheduler = "^3.10.4"
loguru = "^0.7.2"
email-validator = "^2.0.0.post2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^3.0.0"
coverage = "^7.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
