[tool.poetry]
name = "vatrecovery"
version = "0.1.0"
description = "Récupération de TVA sur les notes de frais"
authors = ["TonNom <ton@email.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
alembic = "^1.11.1"
httpx = "^0.23.3"
email-validator = "^2.0.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
pytesseract = "^0.3.10"
pillow = "^9.5.0"
werkzeug = "^2.3"
python-jose = "^3.3.0"
fastapi-limiter = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^3.0.0"
coverage = "^7.3.2"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
